change the name of the main js file

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     <script src="js/benfordtestdata.js"></script>
     <script src="js/benfordslaw.js"></script>
     <script src="js/drawCharts.js"></script>
-    <script src="js/benfordslawpage.js"></script>
     <script src="js/fillTheTable.js"></script>
+    <script src="js/main.js"></script>
     <!-- JavaScript code to handle form submission -->
     <script>
         document.getElementById("uploadForm").addEventListener("submit", function (event) {
